--- a/index.css
+++ b/index.css
@@ -1,3 +1,122 @@
 #heading {
   color: #646464;
 }
+
+.header-section {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 5px 15px;
+  border: 1px solid #f1f1f1;
+  box-shadow: 0px 2px 14px rgba(0, 0, 0, 0.12);
+  border-radius: 10px;
+}
+.search-section {
+  display: flex;
+  /* justify-content: space-between; */
+  align-items: center;
+  gap: 20px;
+  margin: 10px 0px;
+}
+
+.logo {
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+}
+
+.search-input {
+  width: 300px;
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  outline: none;
+}
+.search-btn {
+  padding: 10px 10px;
+  margin-left: 5px;
+  border-radius: 5px;
+  border: none;
+  background-color: #ff5107;
+  color: white;
+  cursor: pointer;
+}
+
+.footer-section {
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  border-radius: 10px;
+  box-shadow: 0px 2px 14px rgba(0, 0, 0, 0.12);
+  padding: 10px;
+}
+.footer-content {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+}
+.restaurant-card {
+  background-color: #fff;
+  border: 1px solid #f1f1f1;
+  border-radius: 10px;
+  padding: 10px;
+  box-shadow: 0px 2px 14px rgba(0, 0, 0, 0.12);
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  width: 250px;
+  height: 350px;
+  cursor: pointer;
+}
+
+.restaurant-list {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  gap: 20px;
+}
+
+.app-layout {
+  height: 86vh;
+}
+
+.body {
+  height: 80%;
+  padding: 20px 10px;
+  overflow: auto;
+}
+
+.text {
+  font-size: 17px;
+  color: #646464;
+  font-weight: 700;
+}
+
+.img-style {
+  height: 180px;
+  border-radius: 10px;
+}
+
+.shimmer-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  padding: 20px 10px;
+}
+
+.shimmer-card {
+  width: 250px;
+  height: 350px;
+  background-color: #f1f1f1;
+  border-radius: 10px;
+  box-shadow: 0px 2px 14px rgba(0, 0, 0, 0.12);
+}
+
+.top-rated-btn {
+  margin: 10px 0px;
+  padding: 10px 20px;
+}
