--- a/index.css
+++ b/index.css
@@ -120,3 +120,29 @@
   margin: 10px 0px;
   padding: 10px 20px;
 }
+
+.nav-section {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+
+.nav-items {
+  list-style: none;
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  cursor: pointer;
+}
+
+.res-menu-card {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.res-menu-img {
+  width: 180px;
+  height: 180px;
+  border-radius: 10px;
+}
