--- a/index.css
+++ b/index.css
@@ -146,3 +146,11 @@
   height: 180px;
   border-radius: 10px;
 }
+
+.user-card {
+  background-color: aliceblue;
+  border-radius: 10px;
+  box-shadow: 0px 2px 14px rgba(0, 0, 0, 0.12);
+  padding: 10px;
+  margin: 10px 0px;
+}
